--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.url=jdbc:mysql://localhost:3306/OwlNote?useSSL=false
 spring.datasource.username=root
-spring.datasource.password=password
+spring.datasource.password=
 
 spring.jackson.serialization.fail-on-empty-beans=false
