--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,12 @@
 			<scope>test</scope>
 			<version>1.4.194</version>
 		</dependency>
+			<dependency>
+				<groupId>org.projectlombok</groupId>
+				<artifactId>lombok</artifactId>
+				<version>1.18.2</version>
+				<scope>provided</scope>
+			</dependency>
 		<!--<dependency>-->
 		<!--<groupId>com.h2database</groupId>-->
 		<!--<artifactId>h2</artifactId>-->
